src/test/compile-fail/class-implements-int.rs
class cat : int { //~ ERROR interface
  let meows: uint;
  new(in_x : uint) { self.meows = in_x; }
}

fn main() {
  let nyan = cat(0u);
}
